# shops

./: README.md  db.sqlite3  pyproject.toml
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
django_api/: settings.py  urls.py
